force-app/main/default/objects/Payment_Allocation__c/fields/Loan_Advance__c.field-meta.xml
<CustomField>
    <fullName>Loan_Advance__c</fullName>
    <label>Loan / Advance</label>
    <referenceTo>Loan_Advance__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>Payment_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>