force-app/main/default/objects/Payment_Allocation__c/fields/Payroll_Payslip__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Payslip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll / Payslip</label>
    <referenceTo>Payroll_Payslip__c</referenceTo>
    <relationshipLabel>Payment Allocations</relationshipLabel>
    <relationshipName>Payment_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>